--- a/python-server_side_rendering/templates/about.html
+++ b/python-server_side_rendering/templates/about.html
@@ -1,6 +1,12 @@
-{% extends "base.html" %}
-{% block title %}About{% endblock %}
-{% block content %}
-  <h2>About us</h2>
-  <p>Some information about the project.</p>
-{% endblock %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>About</title>
+  </head>
+  <body>
+    {% include "header.html" %}
+    <h1>About Us</h1>
+    <p>Page de présentation.</p>
+    {% include "footer.html" %}
+  </body>
+</html>
