--- a/python-server_side_rendering/templates/contact.html
+++ b/python-server_side_rendering/templates/contact.html
@@ -1,6 +1,12 @@
-{% extends "base.html" %}
-{% block title %}Contact{% endblock %}
-{% block content %}
-  <h2>Contact</h2>
-  <p>contact@example.com</p>
-{% endblock %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Contact</title>
+  </head>
+  <body>
+    {% include "header.html" %}
+    <h1>Contact Us</h1>
+    <p>contact@example.com</p>
+    {% include "footer.html" %}
+  </body>
+</html>
