--- a/python-server_side_rendering/templates/index.html
+++ b/python-server_side_rendering/templates/index.html
@@ -1,6 +1,17 @@
-{% extends "base.html" %}
-{% block title %}Home{% endblock %}
-{% block content %}
-  <h2>Welcome</h2>
-  <p>This is the home page.</p>
-{% endblock %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>My Flask App</title>
+  </head>
+  <body>
+    {% include "header.html" %}
+    <h1>Welcome to My Flask App</h1>
+    <p>This is a simple Flask application.</p>
+    <ul>
+      <li>Flask</li>
+      <li>HTML</li>
+      <li>Templates</li>
+    </ul>
+    {% include "footer.html" %}
+  </body>
+</html>
